--- a/sendimages.docbook
+++ b/sendimages.docbook
@@ -39,7 +39,7 @@ to the list of images to send.
 <title>Image Selection</title>
 
 <para>
-When opening the plugin from the host application, the <guilabel>Email images</guilabel>
+When opening the plugin from the host application, the <guilabel>Email Images Options</guilabel>
 dialog will appear with your pre-selected images already in the list at the left part
 of the dialog.</para> 
 <para>
