--- a/index.docbook
+++ b/index.docbook
@@ -5,19 +5,15 @@
  <!ENTITY % addindex "IGNORE">
  <!ENTITY % English "INCLUDE" > <!-- change language only here -->
  <!ENTITY doc-acquireimages SYSTEM "acquireimages.docbook">
- <!ENTITY doc-calendar SYSTEM "calendar.docbook">
  <!ENTITY doc-colorimages SYSTEM "colorimages.docbook">
  <!ENTITY doc-convertimages SYSTEM "convertimages.docbook">
  <!ENTITY doc-effectimages SYSTEM "effectimages.docbook">
  <!ENTITY doc-filterimages SYSTEM "filterimages.docbook">
- <!ENTITY doc-findduplicateimages SYSTEM "findduplicateimages.docbook">
  <!ENTITY doc-flickrexport SYSTEM "flickrexport.docbook">
- <!ENTITY doc-galleryexport SYSTEM "galleryexport.docbook">
  <!ENTITY doc-geolocation SYSTEM "geolocation.docbook">
  <!ENTITY doc-imagesgallery SYSTEM "imagesgallery.docbook">
  <!ENTITY doc-imageviewer SYSTEM "imageviewer.docbook">
  <!ENTITY doc-jpeglossless SYSTEM "jpeglossless.docbook">
- <!ENTITY doc-kameraklient SYSTEM "kameraklient.docbook">
  <!ENTITY doc-metadataeditor SYSTEM "metadataeditor.docbook">
  <!ENTITY doc-printwizard SYSTEM "printwizard.docbook">
  <!ENTITY doc-rawconverter SYSTEM "rawconverter.docbook">
@@ -26,8 +22,6 @@
  <!ENTITY doc-resizeimages SYSTEM "resizeimages.docbook">
  <!ENTITY doc-sendimages SYSTEM "sendimages.docbook">
  <!ENTITY doc-slideshow SYSTEM "slideshow.docbook">
- <!ENTITY doc-timeadjust SYSTEM "timeadjust.docbook">
- <!ENTITY doc-wallpaper SYSTEM "wallpaper.docbook">
 ]>
 
 <book lang="&language;" id="kipi-handbook">
@@ -108,7 +102,7 @@ The plugins available in this handbook are:
 <para><link linkend="acquireimages">Acquire Images plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="calendar">Calendar plugin</link></para>
+<para>The Calendar pluginis a tool to create calendar from image collections</para>
 </listitem>
 <listitem>
 <para><link linkend="colorimages">Color Images plugin</link></para>
@@ -123,13 +117,14 @@ The plugins available in this handbook are:
 <para><link linkend="filterimages">Filter Images plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="findduplicateimages">Find Duplicate Images plugin</link></para>
+<para>The Find Duplicate Images plugin is a tool for find duplicate 
+photograph on your image collections</para>
 </listitem>
 <listitem>
 <para><link linkend="flickrexport">Remote Flickr Export plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="galleryexport">Remote Gallery Export plugin</link></para>
+<para>The Gallery Export plugin is a tool for export image collections to a remote Gallery server</para>
 </listitem>
 <listitem>
 <para><link linkend="geolocation">Geolocation plugin</link></para>
@@ -142,9 +137,6 @@ The plugins available in this handbook are:
 </listitem>
 <listitem>
 <para><link linkend="jpeglossless">JPEG Loss Less plugin</link></para>
-</listitem>
-<listitem>
-<para><link linkend="kameraklient">Digital camera client plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="metadataeditor">Metadata Editor plugin</link></para>
@@ -171,28 +163,28 @@ The plugins available in this handbook are:
 <para><link linkend="slideshow">Slide Show plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="timeadjust">Time Adjust plugin</link></para>
+<para>The Time Adjust plugin is a tool for adjusting image files timestamp</para>
 </listitem>
-<!--<listitem>
-<para><link linkend="wallpaper">Wall Paper plugin</link></para>
-</listitem>-->
 </itemizedlist>
+
+<para id="missing-plugin-docs">
+A lot Kipi plugins currently have no
+documentation.  If you are interested in rectifying that situation,
+please contact the Kipi team mailing list at <email>kde-imaging@kde.org</email>.
+</para>
+
 </chapter>
 
 &doc-acquireimages;
-&doc-calendar;
 &doc-colorimages;
 &doc-convertimages;
 &doc-effectimages;
 &doc-filterimages;
-&doc-findduplicateimages;
 &doc-flickrexport;
-&doc-galleryexport;
 &doc-geolocation;
 &doc-imagesgallery;
 &doc-imageviewer;
 &doc-jpeglossless;
-&doc-kameraklient;
 &doc-metadataeditor;
 &doc-printwizard;
 &doc-rawconverter;
@@ -201,7 +193,6 @@ The plugins available in this handbook are:
 &doc-resizeimages;
 &doc-sendimages;
 &doc-slideshow;
-&doc-timeadjust;
 <!--disabled due to lack of dbus command
         http://lists.kde.org/?l=kde-imaging&m=131279555904019&w=2
 &doc-wallpaper;-->
