--- a/imagesgallery.docbook
+++ b/imagesgallery.docbook
@@ -15,7 +15,7 @@
 
 <abstract>
 <para>
-The Kipi images gallery plugin is a tool for exporting a set of Albums to an HTML page.
+The Kipi images gallery plugin is a tool for exporting a set of Albums or images to a  &HTML; page.
 </para>
 </abstract>
 
@@ -28,9 +28,9 @@ The Kipi images gallery plugin is a tool for exporting a set of Albums to an HTM
 <title>Images Gallery</title>
 
 <para>
-This powerful plugin can export your Albums into a HTML 4.01 compliant web image gallery.
-You can easily select the Albums to export in an HTML page and set many parameters
-for the HTML rendering. UTF-8 encoding is used for the best internationalization.
+This powerful plugin can export your Albums into a  &HTML; compliant web image gallery.
+You can easily select the Albums to export in an  &HTML; page and set many designs and parameters
+for the  &HTML; rendering. UTF-8 encoding is used for the best internationalization.
 </para>
 
 <para>
@@ -42,129 +42,106 @@ You can see some samples built with this plugin at this &URL;</ulink>
 <title>Collections Selection Dialog</title>
 
 <para>
-The plugin has four tabs to change its settings.
-The <guilabel>Selection</guilabel> tab allows you to select all Albums you want
-to export to HTML. Just check the respective Albums (they are displayed without
-hierarchical nesting). The three buttons to the right help to quickly select large
-amounts of Albums. The frame below shows the Album ID-picture with the text that
-will appear as a header of the HTML page.
+Launching the plugin from within &digikam; displays three tabs to change the settings.
+The <guilabel>My Albums</guilabel> tab allows you to select all Albums you want
+to export to  &HTML;. Just check the respective Albums (they are displayed without
+hierarchical nesting). On the next two tabs <guilabel>My Tags</guilabel> and 
+<guilabel>My Searches</guilabel> you can refine your selection using tags or 
+previous search results in &digikam;.
 </para>
 
 <figure id="imagesgallery-collections-selection-dialog">
-    <title>The Collections Selection Dialog</title>
+    <title>The Collections Selection Dialog in &digikam;</title>
     <mediaobject><imageobject>
-      <imagedata srccredit="The Collections Selection Dialog" fileref="imagegallery_collectionselection.png"/>
+      <imagedata srccredit="The Collections Selection Dialog" fileref="digikam-html-collectionselection.png"/>
     </imageobject></mediaobject>
 </figure>
 
-</sect1>
-
-<sect1 id="using-plugin-imagesgallerylooksettings">
-<title>Look Settings Dialog</title>
-
-<para>
-The <guilabel>Look</guilabel> tab defines the general look and layout of each page.
-This tab is largely self-explanatory. The <guilabel>Create pages for each image</guilabel>
-check box will create a gallery with a HTML page per image, that is, if you click
-onto an image a new page will open showing the image within the web browser.
-If you leave this box unchecked clicking the images will directly open them with
-the default image viewer, &eg; Kuickshow.
+<para>Using this plugin &eg; in <application>Gwenview</application> shows another selection dialog
+with two choices for the content of the gallery, either all pictures in the folder or 
+the pictures you selected bevor starting this module:
 </para>
 
-<figure id="imagesgallery-look-settings-dialog">
-    <title>The Look Settings Dialog</title>
+<figure id="gwenview-html-collectionselection-dialog">
+    <title>The Collections Selection Dialog from other applications</title>
     <mediaobject><imageobject>
-      <imagedata srccredit="The Look Settings Dialog" fileref="imagegallery_looksettings.png"/>
+      <imagedata srccredit="The Collections Selection Dialog" fileref="gwenview-html-collectionselection.png"/>
     </imageobject></mediaobject>
 </figure>
 
-</sect1>
-
-<sect1 id="using-plugin-imagesgalleryalbumsettings">
-<title>Album Settings Dialog</title>
-
-<para>
-The <guilabel>Album</guilabel> tab defines the settings of where and how to store
-the gallery with all its associated images. Select a folder with write access
-where you want the gallery to be written to. A sub-folder named KIPIHTMLExport
-will be created containing everything.
+<para>Next step is to select a theme for the gallery from this dialog:
 </para>
 
+<figure id="digikam-html-themeselection-dialog">
+    <title>The Theme Selection Dialog</title>
+    <mediaobject><imageobject>
+      <imagedata srccredit="The Theme Selection Dialog" fileref="digikam-html-themeselection.png"/>
+    </imageobject></mediaobject>
+</figure>
+
+<para>Depending on the choosen theme you may have additional options to fine-tune the appearance of the gallery.
+</para>
+<para>The next screenshot shows the theme parameter setting for the <guilabel>Classic</guilabel> theme:
+</para>
+<figure id="digikam-html-classic-themeparameters-dialog">
+    <title>Parameters for Classic Theme</title>
+    <mediaobject><imageobject>
+      <imagedata srccredit="Parameters for Classic Theme" fileref="digikam-html-classic-themeparameters.png"/>
+    </imageobject></mediaobject>
+</figure>
+
 <para>
-When you check the <guilabel>Resize target images</guilabel> box you can fix the
-maximum target image size (in pixels) with the slider below it. Images bigger than
-this value will be scaled down to it, but smaller images will not be modified.
-The next two check boxes allow you to set specific image compression features.
+For all selected themes you can adjust the settings for the images and thumbnails in the gallery:
+</para>
+
+<figure id="digikam-html-imagesettings-dialog">
+    <title>The Image Settings and Thumbnails Dialog</title>
+    <mediaobject><imageobject>
+      <imagedata srccredit="The Image Settings and Thumbnails Dialog" fileref="digikam-html-imagesettings.png"/>
+    </imageobject></mediaobject>
+</figure>
+
+<para>
+In the <guilabel>Full Image</guilabel> section you can either save modified images or 
+<guilabel>Use original images</guilabel>.
+</para>
+<para>For modified images you can select as output format JPEG (smallest filesize, but lossy) and PNG 
+(lossless and free license) and set specific image compression features.
 If disk space is of concern check the target image compression and lower the
-compression level from the host application default value. Then you can choose
-between JPEG (smallest filesize, but lossy) and PNG (lossless and free license) formats.
+compression level from the host application default value.
 </para>
-
+<para>Checking the <guilabel>Max. size</guilabel> box you can fix the
+maximum target image size (in pixels) with the spinbox at the right. Images bigger than
+this value will be scaled down to it, but smaller images will not be modified.
+</para>
 <note><para>
 If JPEG file format is selected for target resizing images, all EXIF information
 will be preserved from the original JPEG files.
 </para></note>
 
 <para>
-With the <guilabel>Set different color depth</guilabel> check box you can change
-the default color depth. This will of course influence the file size. The rest
-of the settings are rather self-explanatory.
+The <guilabel>Thumbnails</guilabel> section allows to set the <guilabel>Format</guilabel>, 
+<guilabel>Quality</guilabel> and <guilabel>Size</guilabel> for the thumbnails in the gallery.
 </para>
 
-<figure id="imagesgallery-album-settings-dialog">
-    <title>The Album Settings Dialog</title>
+<figure id="digikam-html-output-dialog">
+    <title>The Output Dialog</title>
     <mediaobject><imageobject>
-      <imagedata srccredit="The Album Settings Dialog" fileref="imagegallery_albumsettings.png"/>
+      <imagedata srccredit="The Output Dialog" fileref="digikam-html-output.png"/>
     </imageobject></mediaobject>
 </figure>
-
-</sect1>
-
-<sect1 id="using-plugin-imagesgallerythumbsettings">
-<title>Thumbnails Settings Dialog</title>
 
 <para>
-The <guilabel>Thumbnails</guilabel> tab allows to set some of the <guilabel>Album</guilabel>
-tab settings for the thumbnails (that are the small images shown in the gallery).
+This page defines the settings of where and how to store
+the gallery with all its associated images. Select a folder or add a new folder with write access
+where you want the gallery to be written to. Two sub-folders with the name of your album folder 
+and the theme name will be created containing everything.
 </para>
-
-<figure id="imagesgallery-thumbnails-settings-dialog">
-    <title>The Thumbnails Settings Dialog</title>
-    <mediaobject><imageobject>
-      <imagedata srccredit="The Thumbnails Settings Dialog" fileref="imagegallery_thumbsettings.png"/>
-    </imageobject></mediaobject>
-</figure>
-
-</sect1>
-
-<sect1 id="using-plugin-imagesgalleryinaction">
-<title>Images Gallery in Action</title>
 
 <para>
 A progress dialog giving a feedback indicate to user. Press <guilabel>Cancel</guilabel>
 button during this stage if you want abort the process.
 </para>
-
-<figure id="imagesgallery-images-gallery-action">
-    <title>The Images Gallery Plugin in Action</title>
-    <mediaobject><imageobject>
-      <imagedata srccredit="The Images Gallery Plugin in Action" fileref="imagegallery_progress.png"/>
-    </imageobject></mediaobject>
-</figure>
-
-<para>
-When all jobs are completed, this dialog will not closed automatically and you
-can consult the progress messages if any errors occurs during this stage. The web
-browser will be started automatically at end to display a gallery preview. Press the
-<guibutton>Close</guibutton> button to close the dialog.
-</para>
-
-<figure id="imagesgallery-images-gallery-preview">
-    <title>The Images Gallery Preview in Konqueror</title>
-    <mediaobject><imageobject>
-      <imagedata srccredit="The Images Gallery Preview in Konqueror" fileref="imagegallery_preview.png"/>
-    </imageobject></mediaobject>
-</figure>
 
 </sect1>
 
@@ -177,4 +154,3 @@ sgml-omittag: nil
 sgml-shorttag: t
 End:
 -->
-
